templates/www_template.yaml
---
# Source: www/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-www
  labels:
    helm.sh/chart: www-0.8.1
    app.kubernetes.io/name: www
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: www
    app.kubernetes.io/instance: release-name
---
# Source: www/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-www
  labels:
    helm.sh/chart: www-0.8.1
    app.kubernetes.io/name: www
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: www
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: www
        app.kubernetes.io/instance: release-name
    spec:
      
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: release-name-www
        image: "index.docker.io/dniel/www:master"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
          periodSeconds: 10
---
# Source: www/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: "release-name-www"
  labels:
    helm.sh/chart: www-0.8.1
    app.kubernetes.io/name: www
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm

spec:
  entryPoints:
    - websecure  

  routes:
  - match: Host(`www.example.test`)
    kind: Rule
    services:
    - name: release-name-www
      port: 80
    middlewares:
    - name: forwardauth-authorize
      namespace: forwardauth  

  tls:
    certResolver: "default"
